fix: wrap default error message text in V3 DateRangePicker

--- a/packages/@react-spectrum/datepicker/src/styles.css
+++ b/packages/@react-spectrum/datepicker/src/styles.css
@@ -141,7 +141,7 @@
 }
 
 .react-spectrum-Datepicker-dialog.react-spectrum-Datepicker-dialog {
-  width: auto;
+  max-width: fit-content;
 }
 
 .react-spectrum-Datepicker-dialogContent {
